--- a/apps/file-manager/package.json
+++ b/apps/file-manager/package.json
@@ -14,6 +14,10 @@
     "react-native-screens": "*",
     "@react-navigation/native-stack": "*",
     "react-native-safe-area-context": "*",
-    "zustand": "*"
+    "styled-components": "*",
+    "zustand": "*",
+    "react-native-vector-icons": "*",
+    "rn-fetch-blob": "*",
+    "react-native-mime-types": "*"
   }
 }
