--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "@react-navigation/native-stack": "^6.6.2",
     "react": "18.1.0",
     "react-native": "0.68.1",
+    "react-native-mime-types": "^2.3.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
+    "rn-fetch-blob": "^0.12.0",
+    "styled-components": "^5.3.5",
     "tslib": "^2.3.0",
     "zustand": "3.7.2"
   },
@@ -43,6 +47,9 @@
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-native": "0.67.6",
+    "@types/react-native-vector-icons": "^6.4.10",
+    "@types/styled-components": "5.1.6",
+    "@types/styled-components-react-native": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "babel-jest": "27.5.1",
