--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check-app-types": "tsc --noEmit --project apps/box/tsconfig.app.json && tsc --noEmit --project apps/file-manager/tsconfig.app.json",
     "check-lib-types": "tsc --noEmit --project libs/component-library/tsconfig.lib.json",
     "check": "yarn lint && yarn test && yarn check-app-types && yarn check-lib-types",
-    "check-ci": "yarn run check"
+    "check-ci": "yarn run check",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -72,6 +73,7 @@
     "react-test-renderer": "18.0.0",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "husky": "^8.0.0"
   }
 }
