--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "*",
     "react-native-gesture-handler": "*",
     "react-native-redash": "*",
-    "react-native-device-info": "*"
+    "react-native-device-info": "*",
+    "@react-three/fiber": "*"
   }
 }
