Begin adding support for Expo modules
Initial commit to add support for Expo modules. This only has the
iOS integration steps at the moment.

--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "@shopify/restyle": "^2.1.0",
     "@walletconnect/react-native-dapp": "^1.7.8",
     "axios": "^0.27.2",
+    "expo": "^46.0.0-alpha.2",
     "node-libs-react-native": "^1.2.1",
     "react": "18.1.0",
-    "react-native": "0.69.0",
+    "react-native": "0.69.1",
     "react-native-device-info": "^9.0.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-localize": "^2.2.2",
