--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@react-three/fiber": "^8.1.0",
     "@shopify/restyle": "^2.1.0",
+    "@types/three": "^0.141.0",
     "@walletconnect/react-native-dapp": "^1.7.8",
     "axios": "^0.27.2",
     "expo": "^46.0.0-alpha.2",
+    "expo-gl": "^11.4.0",
+    "expo-three": "^6.1.0",
     "node-libs-react-native": "^1.2.1",
     "react": "18.1.0",
     "react-native": "0.69.1",
@@ -38,6 +42,7 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "1.0.0",
     "react-native-wifi-reborn": "^4.6.0",
+    "three": "^0.142.0",
     "tslib": "^2.3.0",
     "zustand": "3.7.2"
   },
