Added spring rotation for both x and y axis; allowed panning while tower is selected

--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -34,6 +34,7 @@
     "expo-three": "*",
     "three": "*",
     "@visx/scale": "*",
-    "@shopify/react-native-skia": "*"
+    "@shopify/react-native-skia": "*",
+    "@react-spring/three": "*"
   }
 }
