Add bottom-sheet package to project
Adds bottom-sheet package to project.

--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -35,6 +35,7 @@
     "three": "*",
     "@visx/scale": "*",
     "@shopify/react-native-skia": "*",
-    "@react-spring/three": "*"
+    "@react-spring/three": "*",
+    "@gorhom/bottom-sheet": "*"
   }
 }
