--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.17.6",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -98,6 +99,7 @@
     "typescript": "4.7.4"
   },
   "resolutions": {
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "react-native-redash": "^17.0.0"
   }
 }
