--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "1.17.6",
+    "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
@@ -45,6 +46,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "1.0.0",
+    "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
     "three": "^0.142.0",
     "tslib": "^2.3.0",
