--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@react-three/fiber": "^8.1.0",
     "@shopify/react-native-skia": "^0.1.136",
     "@shopify/restyle": "^2.1.0",
-    "@types/three": "^0.141.0",
     "@visx/scale": "^2.2.2",
     "@walletconnect/react-native-dapp": "^1.7.8",
     "axios": "^0.27.2",
@@ -41,6 +40,7 @@
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^3.0.0-rc.0",
+    "react-native-reanimated-carousel": "^3.0.3",
     "react-native-redash": "^17.0.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
@@ -73,6 +73,7 @@
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
     "@types/react-native": "0.67.8",
+    "@types/three": "^0.141.0",
     "@typescript-eslint/eslint-plugin": "5.24.0",
     "@typescript-eslint/parser": "5.24.0",
     "babel-jest": "27.5.1",
