--- a/apps/box/android/settings.gradle
+++ b/apps/box/android/settings.gradle
@@ -1,13 +1,23 @@
 rootProject.name = 'Box'
 
 include ':react-native-config'
-project(':react-native-config').projectDir = new File(rootProject.projectDir, '../../../node_modules/react-native-config/android')
+project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
 
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
 applyNativeModulesSettingsGradle(settings)
 
 include ':app'
-includeBuild('../node_modules/react-native-gradle-plugin')
+
+def isIDE = properties.containsKey('android.injected.invoked.from.ide') ||
+        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij")
+        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij") ||
+        System.getenv("IDEA_INITIAL_DIRECTORY") != null
+
+if (isIDE) {
+    includeBuild('../../../node_modules/react-native-gradle-plugin')
+} else {
+    includeBuild('../node_modules/react-native-gradle-plugin')
+}
 
 if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
     include(":ReactAndroid")
