Fix iOS archive bundling

--- a/apps/box/project.json
+++ b/apps/box/project.json
@@ -25,7 +25,7 @@
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "ios",
-        "bundleOutput": "dist/apps/box/ios/main.jsbundle"
+        "bundleOutput": "apps/box/ios/main.jsbundle"
       }
     },
     "run-android": {
