--- a/bitrise.yml
+++ b/bitrise.yml
@@ -80,6 +80,11 @@ workflows:
           inputs:
             - podfile_path: $BITRISE_SOURCE_DIR/apps/box/ios/Podfile
             - source_root_path: $BITRISE_SOURCE_DIR/apps/box/ios/
+      - manage-ios-code-signing@1:
+          inputs:
+            - configuration: Release
+            - distribution_method: ad-hoc
+          is_always_run: true
       - xcode-archive@4:
           inputs:
             - certificate_url_list: ''
