--- a/bitrise.yml
+++ b/bitrise.yml
@@ -90,6 +90,7 @@ workflows:
             - upload_bitcode: 'no'
             - compile_bitcode: 'no'
             - distribution_method: ad-hoc
+      - deploy-to-bitrise-io@2: {}
 meta:
   bitrise.io:
     stack: osx-xcode-13.2.x
