--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "1.17.6",
+    "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
