--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-svg": "12.3.0",
-    "react-native-svg-transformer": "1.0.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
     "three": "^0.142.0",
