--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -6,6 +6,7 @@
     "@react-native-async-storage/async-storage": "*",
     "@react-native-picker/picker": "*",
     "@react-navigation/bottom-tabs": "*",
+    "@react-navigation/material-top-tabs": "*",
     "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
     "@shopify/restyle": "*",
@@ -21,12 +22,14 @@
     "react-native-device-info": "*",
     "react-native-gesture-handler": "*",
     "react-native-localize": "*",
+    "react-native-pager-view": "*",
     "react-native-randombytes": "*",
     "react-native-reanimated": "*",
     "react-native-redash": "*",
     "react-native-safe-area-context": "*",
     "react-native-screens": "*",
     "react-native-svg": "*",
+    "react-native-tab-view": "*",
     "react-native-wifi-reborn": "*",
     "zustand": "*",
     "@react-three/fiber": "*",
