--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/material-top-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-spring/three": "^9.5.0",
@@ -43,6 +44,7 @@
     "react-native-device-info": "^10.0.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-localize": "^2.2.2",
+    "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
     "react-native-reanimated": "^3.0.0-rc.0",
@@ -52,6 +54,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-tab-view": "^3.2.1",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
     "three": "^0.142.0",
