enhance setup pages

--- a/apps/box/android/build.gradle
+++ b/apps/box/android/build.gradle
@@ -59,4 +59,9 @@ allprojects {
         }
         
     }
+    configurations.all {
+        resolutionStrategy {
+            force 'com.facebook.react:react-native:0.69.1'
+        }
+    }
 }
