--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native": "0.69.1",
     "react-native-device-info": "^10.0.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-localize": "^2.2.2",
     "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
