--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "private": true,
   "dependencies": {
+    "@functionland/fula-sec": "^2.0.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
@@ -44,6 +45,7 @@
     "react-native": "0.69.1",
     "react-native-device-info": "^10.0.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.2",
     "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
@@ -56,8 +58,10 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.2.1",
+    "react-native-webview": "^11.25.0",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
+    "text-encoding-polyfill": "^0.6.7",
     "three": "^0.142.0",
     "tslib": "^2.3.0",
     "zustand": "^4.0.0"
