--- a/apps/box/android/app/src/debug/AndroidManifest.xml
+++ b/apps/box/android/app/src/debug/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <application
         android:usesCleartextTraffic="true"
         tools:targetApi="28"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:networkSecurityConfig="@xml/network_security_config">
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
     </application>
 </manifest>
