--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@nrwl/cli": "14.3.6",
     "@nrwl/detox": "14.3.6",
     "@nrwl/eslint-plugin-nx": "14.3.6",
