--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-native-async-storage/async-storage": "*",
+    "@react-native-community/netinfo": "*",
     "@react-native-picker/picker": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
