--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
