--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@functionland/react-native-fula": "*",
     "@react-native-async-storage/async-storage": "*",
+    "@react-native-community/netinfo": "*",
     "@react-native-picker/picker": "*",
     "@react-navigation/bottom-tabs": "*",
     "@react-navigation/material-top-tabs": "*",
@@ -30,6 +32,7 @@
     "react-native-screens": "*",
     "react-native-svg": "*",
     "react-native-tab-view": "*",
+    "react-native-webview": "*",
     "react-native-wifi-reborn": "*",
     "zustand": "*",
     "@react-three/fiber": "*",
@@ -47,6 +50,10 @@
     "@react-native-clipboard/clipboard": "*",
     "react-native-svg-transformer": "*",
     "moment": "*",
-    "@react-navigation/stack": "*"
+    "@react-navigation/stack": "*",
+    "@functionland/fula-sec": "*",
+    "text-encoding-polyfill": "*",
+    "react-native-keychain": "*",
+    "react-native-keyboard-aware-scroll-view": "*"
   }
 }
