--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "private": true,
   "dependencies": {
+    "@functionland/fula-sec": "^2.0.0",
+    "@functionland/react-native-fula": "github:https://github.com/functionland/react-native-fula.git",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
+    "@react-native-community/netinfo": "^9.3.7",
     "@react-native-community/slider": "^4.2.4",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
@@ -44,6 +47,8 @@
     "react-native": "0.69.1",
     "react-native-device-info": "^10.0.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.2",
     "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
@@ -56,13 +61,16 @@
     "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.2.1",
+    "react-native-webview": "^11.25.0",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
+    "text-encoding-polyfill": "^0.6.7",
     "three": "^0.142.0",
     "tslib": "^2.3.0",
     "zustand": "^4.0.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@nrwl/cli": "14.3.6",
     "@nrwl/detox": "14.3.6",
     "@nrwl/eslint-plugin-nx": "14.3.6",
