--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.box">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="land.fx.blox">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <queries>
