--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,102 +1,122 @@
----
-format_version: '11'
-default_step_lib_source: 'https://github.com/bitrise-io/bitrise-steplib.git'
+format_version: "11"
+default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 project_type: react-native
 workflows:
   FxBlox Android:
-    description: >
+    description: |
       Installs dependencies.
 
-
       Next steps:
-
       - Add tests to your project and configure the workflow to run them.
-
-      - Check out [Getting started with Expo
-      apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-expo-apps.html).
+      - Check out [Getting started with Expo apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-expo-apps.html).
     steps:
-      - activate-ssh-key@4: {}
-      - git-clone@6: {}
-      - yarn@0:
-          inputs:
-            - command: install
-      - npm@1:
-          inputs:
-            - command: 'run ensure:symlink'
-          title: Ensure Symlink
-      - script@1:
-          inputs:
-            - content: >-
-                #!/usr/bin/env bash
+    - activate-ssh-key@4: {}
+    - git-clone@6: {}
+    - yarn@0:
+        inputs:
+        - command: install
+    - npm@1:
+        inputs:
+        - command: run ensure:symlink
+        title: Ensure Symlink
+    - script@1:
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            # fail if any commands fails
+            #set -e
+            # make pipelines' return status equal the last command to exit with a non-zero status, or zero if all commands exit #successfully
+            #set -o pipefail
+            # debug log
+            set -x
 
-                # fail if any commands fails
-
-                #set -e
-
-                # make pipelines' return status equal the last command to exit with
-                a non-zero status, or zero if all commands exit #successfully
-
-                #set -o pipefail
-
-                # debug log
-
-                set -x
-
-
-                # write your script here
-
-                sdkmanager --install "cmake;3.10.2.4988404"
-
-                yes | sdkmanager --licenses
-          title: Install CMake
-      - android-build@1:
-          inputs:
-            - variant: release
-            - module: app
-            - project_location: $BITRISE_SOURCE_DIR/apps/box/android
-      - deploy-to-bitrise-io@2: {}
+            # write your script here
+            sdkmanager --install "cmake;3.10.2.4988404"
+            yes | sdkmanager --licenses
+        title: Install CMake
+    - android-build@1:
+        inputs:
+        - variant: release
+        - module: app
+        - project_location: $BITRISE_SOURCE_DIR/apps/box/android
+    - deploy-to-bitrise-io@2: {}
   FxBlox iOS:
-    description: >
+    description: |
       Installs dependencies.
 
+      Next steps:
+      - Add tests to your project and configure the workflow to run them.
+      - Check out [Getting started with Expo apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-expo-apps.html).
+    steps:
+    - activate-ssh-key@4: {}
+    - git-clone@6: {}
+    - yarn@0:
+        inputs:
+        - command: install
+    - npm@1:
+        inputs:
+        - command: run ensure:symlink
+        title: Ensure Symlink
+    - cocoapods-install@2:
+        inputs:
+        - podfile_path: $BITRISE_SOURCE_DIR/apps/box/ios/Podfile
+        - source_root_path: $BITRISE_SOURCE_DIR/apps/box/ios/
+    - certificate-and-profile-installer@1: {}
+    - xcode-archive@4:
+        inputs:
+        - certificate_url_list: ""
+        - scheme: Box
+        - project_path: $BITRISE_SOURCE_DIR/apps/box/ios/Box.xcworkspace
+        - configuration: Release
+        - upload_bitcode: "no"
+        - compile_bitcode: "no"
+        - distribution_method: ad-hoc
+    - deploy-to-bitrise-io@2: {}
+  FxBlox_Android_Deploy:
+    description: |
+      Installs dependencies.
 
       Next steps:
-
       - Add tests to your project and configure the workflow to run them.
-
-      - Check out [Getting started with Expo
-      apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-expo-apps.html).
+      - Check out [Getting started with Expo apps](https://devcenter.bitrise.io/en/getting-started/getting-started-with-expo-apps.html).
     steps:
-      - activate-ssh-key@4: {}
-      - git-clone@6: {}
-      - yarn@0:
-          inputs:
-            - command: install
-      - npm@1:
-          inputs:
-            - command: 'run ensure:symlink'
-          title: Ensure Symlink
-      - cocoapods-install@2:
-          inputs:
-            - podfile_path: $BITRISE_SOURCE_DIR/apps/box/ios/Podfile
-            - source_root_path: $BITRISE_SOURCE_DIR/apps/box/ios/
-      - certificate-and-profile-installer@1: {}
-      - xcode-archive@4:
-          inputs:
-            - certificate_url_list: ''
-            - scheme: Box
-            - project_path: $BITRISE_SOURCE_DIR/apps/box/ios/Box.xcworkspace
-            - configuration: Release
-            - upload_bitcode: 'no'
-            - compile_bitcode: 'no'
-            - distribution_method: ad-hoc
-      - deploy-to-bitrise-io@2: {}
+    - activate-ssh-key@4: {}
+    - git-clone@6: {}
+    - yarn@0:
+        inputs:
+        - command: install
+    - npm@1:
+        inputs:
+        - command: run ensure:symlink
+        title: Ensure Symlink
+    - script@1:
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            # fail if any commands fails
+            #set -e
+            # make pipelines' return status equal the last command to exit with a non-zero status, or zero if all commands exit #successfully
+            #set -o pipefail
+            # debug log
+            set -x
+
+            # write your script here
+            sdkmanager --install "cmake;3.10.2.4988404"
+            yes | sdkmanager --licenses
+        title: Install CMake
+    - android-build@1:
+        inputs:
+        - variant: release
+        - module: app
+        - build_type: aab
+        - project_location: $BITRISE_SOURCE_DIR/apps/box/android
+    - deploy-to-bitrise-io@2: {}
 meta:
   bitrise.io:
     stack: osx-xcode-13.2.x
     machine_type_id: g2.4core
 app:
   envs:
-    - opts:
-        is_expand: false
-      PLATFORM: android
+  - opts:
+      is_expand: false
+    PLATFORM: android
