--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-community/slider": "^4.2.4",
+    "@react-native-firebase/app": "^17.4.3",
+    "@react-native-firebase/crashlytics": "^17.4.3",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.4",
