--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   "private": true,
   "dependencies": {
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "github:https://github.com/functionland/react-native-fula.git#blockchain",
+    "@functionland/react-native-fula": "^1.1.5",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-community/slider": "^4.2.4",
+    "@react-native-firebase/app": "^17.4.3",
+    "@react-native-firebase/crashlytics": "^17.4.3",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.4",
