--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.2.0",
+    "@functionland/react-native-fula": "1.2.4",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
@@ -48,6 +48,7 @@
     "react": "18.1.0",
     "react-native": "0.69.1",
     "react-native-device-info": "^10.0.2",
+    "react-native-fula": "^0.3.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
