--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.2.4",
+    "@functionland/react-native-fula": "^1.9.0",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
