--- a/apps/box/android/app/src/main/AndroidManifest.xml
+++ b/apps/box/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,16 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="land.fx.blox">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:tools="http://schemas.android.com/tools"
+    package="land.fx.blox">
   <uses-permission android:name="android.permission.INTERNET"/>
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
   <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+  <uses-permission android:name="android.permission.BLUETOOTH" tools:remove="android:maxSdkVersion" />
+  <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" tools:remove="android:maxSdkVersion" />
+  <uses-permission android:name="android.permission.BLUETOOTH_SCAN" android:usesPermissionFlags="neverForLocation" />
+  <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
