--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "node-libs-react-native": "^1.2.1",
     "react": "18.1.0",
     "react-native": "0.69.1",
+    "react-native-ble-manager": "^10.0.2",
     "react-native-device-info": "^10.0.2",
     "react-native-fula": "^0.3.1",
     "react-native-gesture-handler": "^2.5.0",
