--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@shopify/react-native-skia": "^0.1.136",
     "@shopify/restyle": "^2.1.0",
     "@visx/scale": "^2.2.2",
-    "@walletconnect/react-native-dapp": "^1.7.8",
+    "@walletconnect/encoding": "^1.0.2",
+    "@web3modal/react-native": "^1.0.0-alpha.8",
     "axios": "^0.27.2",
+    "big-integer": "^1.6.51",
     "expo": "^46.0.0-alpha.2",
     "expo-gl": "^11.4.0",
     "expo-three": "^6.1.0",
@@ -51,9 +53,11 @@
     "react-native-device-info": "^10.0.2",
     "react-native-fula": "^0.3.1",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.2",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
