--- a/apps/box/.babelrc
+++ b/apps/box/.babelrc
@@ -1,4 +1,18 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
-  "plugins": ["react-native-reanimated/plugin",["@babel/plugin-proposal-export-namespace-from"]]
+  "presets": [
+    [
+      "module:metro-react-native-babel-preset",
+      { "useTransformReactJSXExperimental": true }
+    ]
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-react-jsx",
+      {
+        "runtime": "automatic"
+      }
+    ],
+    "react-native-reanimated/plugin",
+    ["@babel/plugin-proposal-export-namespace-from"]
+  ]
 }
