--- a/apps/box/ios/Podfile
+++ b/apps/box/ios/Podfile
@@ -7,6 +7,12 @@ platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
 target 'Box' do
+  #use_modular_headers!
+  #pod 'glog', :podspec => '../../../node_modules/react-native/third-party-podspecs/glog.podspec', :modular_headers => false
+  use_frameworks! :linkage => :static
+  # right after `use_frameworks! :linkage => :static`
+  $RNFirebaseAsStaticFramework = true
+  
   use_expo_modules!
   post_integrate do |installer|
     begin
@@ -28,16 +34,51 @@ target 'Box' do
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
-
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  #use_flipper!()
+  
+  $static_library = [
+    'React',
+    'react-native-skia/Api',
+    'react-native-skia/Jsi',
+    'react-native-skia/RNSkia',
+    'react-native-skia/SkiaHeaders',
+    'react-native-skia/Utils',
+    'react-native-skia',
+  ]
 
+  pre_install do |installer|
+    Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
+
+    installer.pod_targets.each do |pod|
+      ## Skia pod correction
+      if $static_library.include?(pod.name)
+        puts "Overriding the build_type to static_library from static_framework for #{pod.name}"
+        def pod.build_type;
+          Pod::BuildType.static_library
+        end
+      end
+
+      ## Firebase
+      bt = pod.send(:build_type)
+      puts "#{pod.name} (#{bt})"
+      puts "  linkage: #{bt.send(:linkage)} packaging: #{bt.send(:packaging)}"
+    end
+  end
   post_install do |installer|
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    #Fix the packages sign issue in xcode 14.x 
+    installer.pods_project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['EXPANDED_CODE_SIGN_IDENTITY'] = ""
+        config.build_settings['CODE_SIGNING_REQUIRED'] = "NO"
+        config.build_settings['CODE_SIGNING_ALLOWED'] = "NO"
+      end
+    end
     nx_post_install(installer)
 
     installer.pods_project.targets.each do |target|
