--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -58,10 +58,10 @@
     "react-native-keychain": "*",
     "react-native-keyboard-aware-scroll-view": "*",
     "react-native-ble-manager": "*",
-    "@web3modal/react-native": "*",
     "react-native-get-random-values": "*",
     "react-native-modal": "*",
     "big-integer": "*",
-    "@walletconnect/encoding": "*"
+    "@walletconnect/encoding": "*",
+    "@walletconnect/modal-react-native": "^1.0.0-rc.5"
   }
 }
