--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
   "private": true,
   "dependencies": {
     "@functionland/fula-sec": "^2.0.0",
-    "@functionland/react-native-fula": "1.2.0",
+    "@functionland/react-native-fula": "1.14.7",
     "@gorhom/bottom-sheet": "^4",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-community/slider": "^4.2.4",
-    "@react-native-firebase/app": "^17.4.3",
-    "@react-native-firebase/crashlytics": "^17.4.3",
+    "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/crashlytics": "^18.1.0",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-top-tabs": "^6.2.4",
@@ -34,11 +34,14 @@
     "@react-navigation/stack": "^6.3.2",
     "@react-spring/three": "^9.5.0",
     "@react-three/fiber": "^8.1.0",
-    "@shopify/react-native-skia": "^0.1.136",
+    "@shopify/react-native-skia": "^0.1.195",
     "@shopify/restyle": "^2.1.0",
     "@visx/scale": "^2.2.2",
-    "@walletconnect/react-native-dapp": "^1.7.8",
+    "@walletconnect/encoding": "^1.0.2",
+    "@walletconnect/modal-react-native": "^1.0.0-rc.11",
     "axios": "^0.27.2",
+    "big-integer": "^1.6.51",
+    "ethers": "5.7.2",
     "expo": "^46.0.0-alpha.2",
     "expo-gl": "^11.4.0",
     "expo-three": "^6.1.0",
@@ -47,11 +50,15 @@
     "node-libs-react-native": "^1.2.1",
     "react": "18.1.0",
     "react-native": "0.69.1",
+    "react-native-ble-manager": "^10.0.2",
     "react-native-device-info": "^10.0.2",
+    "react-native-fula": "^0.3.1",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keychain": "^8.1.1",
     "react-native-localize": "^2.2.2",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.0.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-randombytes": "^3.6.1",
@@ -66,6 +73,7 @@
     "react-native-webview": "^11.25.0",
     "react-native-wheel-color-picker": "^1.2.0",
     "react-native-wifi-reborn": "^4.6.0",
+    "react-native-zeroconf": "^0.13.8",
     "text-encoding-polyfill": "^0.6.7",
     "three": "^0.142.0",
     "tslib": "^2.3.0",
