--- a/apps/file-manager/tsconfig.json
+++ b/apps/file-manager/tsconfig.json
@@ -3,18 +3,13 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "jsx": "react-native",
-    "lib": [
-      "dom",
-      "esnext"
-    ],
+    "lib": ["dom", "esnext"],
     "moduleResolution": "node",
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true
   },
-  "files": [
-    "../../node_modules/@nrwl/react-native/typings/svg.d.ts"
-  ],
+  "files": ["../../node_modules/@nx/react-native/typings/svg.d.ts"],
   "include": [],
   "references": [
     {
@@ -24,7 +19,5 @@
       "path": "./tsconfig.spec.json"
     }
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
