--- a/libs/component-library/project.json
+++ b/libs/component-library/project.json
@@ -1,28 +1,22 @@
 {
+  "name": "component-library",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/component-library/src",
   "projectType": "library",
   "tags": [],
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "libs/component-library/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["libs/component-library/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/component-library"
-      ],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/libs/component-library"],
       "options": {
-        "jestConfig": "libs/component-library/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "libs/component-library/jest.config.ts"
       }
     }
   }
