--- a/apps/box/project.json
+++ b/apps/box/project.json
@@ -1,13 +1,19 @@
 {
+  "name": "box",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/box/src",
   "projectType": "application",
   "targets": {
     "start": {
-      "executor": "@nrwl/react-native:start",
+      "executor": "@nx/react-native:start",
       "options": {
         "port": 8081
-      }
+      },
+      "dependsOn": [
+        "ensure-symlink",
+        "sync-deps",
+        "pod-install"
+      ]
     },
     "serve": {
       "executor": "@nrwl/workspace:run-commands",
@@ -16,62 +22,104 @@
       }
     },
     "run-ios": {
-      "executor": "@nrwl/react-native:run-ios",
-      "options": {}
+      "executor": "@nx/react-native:run-ios",
+      "options": {},
+      "dependsOn": [
+        "ensure-symlink",
+        "sync-deps",
+        "pod-install"
+      ]
     },
     "bundle-ios": {
-      "executor": "@nrwl/react-native:bundle",
-      "outputs": ["apps/box/build"],
+      "executor": "@nx/react-native:bundle",
+      "outputs": [
+        "{projectRoot}/build"
+      ],
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "ios",
         "bundleOutput": "apps/box/ios/main.jsbundle"
-      }
+      },
+      "dependsOn": [
+        "ensure-symlink"
+      ]
     },
     "run-android": {
-      "executor": "@nrwl/react-native:run-android",
-      "options": {}
+      "executor": "@nx/react-native:run-android",
+      "options": {},
+      "dependsOn": [
+        "ensure-symlink",
+        "sync-deps"
+      ]
     },
     "build-android": {
-      "executor": "@nrwl/react-native:build-android",
+      "executor": "@nx/react-native:build-android",
       "outputs": [
-        "apps/box/android/app/build/outputs/bundle",
-        "apps/box/android/app/build/outputs/apk"
+        "{projectRoot}/android/app/build/outputs/bundle",
+        "{projectRoot}/android/app/build/outputs/apk"
       ],
-      "options": {}
+      "options": {},
+      "dependsOn": [
+        "ensure-symlink",
+        "sync-deps"
+      ]
     },
     "bundle-android": {
-      "executor": "@nrwl/react-native:bundle",
+      "executor": "@nx/react-native:bundle",
       "options": {
         "entryFile": "src/main.tsx",
         "platform": "android",
         "bundleOutput": "dist/apps/box/android/main.jsbundle"
-      }
+      },
+      "dependsOn": [
+        "ensure-symlink"
+      ]
     },
     "sync-deps": {
-      "executor": "@nrwl/react-native:sync-deps",
+      "executor": "@nx/react-native:sync-deps",
       "options": {
         "include": "@walletconnect/modal-react-native,react-native-randombytes,react-native-reanimated"
       }
     },
     "ensure-symlink": {
-      "executor": "@nrwl/react-native:ensure-symlink",
+      "executor": "@nx/react-native:ensure-symlink",
       "options": {}
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "executor": "@nx/eslint:lint",
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/box/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/box/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/box"],
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/apps/box"
+      ],
       "options": {
-        "jestConfig": "apps/box/jest.config.ts",
-        "passWithNoTests": true
+        "jestConfig": "apps/box/jest.config.ts"
       }
+    },
+    "build-ios": {
+      "executor": "@nx/react-native:build-ios",
+      "outputs": [
+        "{projectRoot}/ios/build/Build"
+      ],
+      "options": {},
+      "dependsOn": [
+        "ensure-symlink",
+        "sync-deps",
+        "pod-install"
+      ]
+    },
+    "pod-install": {
+      "executor": "@nx/react-native:pod-install",
+      "options": {}
     }
   },
   "tags": []
