--- a/apps/file-manager-e2e/project.json
+++ b/apps/file-manager-e2e/project.json
@@ -1,10 +1,11 @@
 {
+  "name": "file-manager-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/file-manager-e2e/src",
   "projectType": "application",
   "targets": {
     "build-ios": {
-      "executor": "@nrwl/detox:build",
+      "executor": "@nx/detox:build",
       "options": {
         "detoxConfiguration": "ios.sim.debug"
       },
@@ -15,7 +16,7 @@
       }
     },
     "test-ios": {
-      "executor": "@nrwl/detox:test",
+      "executor": "@nx/detox:test",
       "options": {
         "detoxConfiguration": "ios.sim.debug",
         "buildTarget": "file-manager-e2e:build-ios"
@@ -28,7 +29,7 @@
       }
     },
     "build-android": {
-      "executor": "@nrwl/detox:build",
+      "executor": "@nx/detox:build",
       "options": {
         "detoxConfiguration": "android.emu.debug"
       },
@@ -39,7 +40,7 @@
       }
     },
     "test-android": {
-      "executor": "@nrwl/detox:test",
+      "executor": "@nx/detox:test",
       "options": {
         "detoxConfiguration": "android.emu.debug",
         "buildTarget": "file-manager-e2e:build-android"
@@ -52,19 +53,13 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "executor": "@nx/eslint:lint",
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/file-manager-e2e/**/*.{ts,tsx,js,jsx}"
-        ]
+        "lintFilePatterns": ["apps/file-manager-e2e/**/*.{ts,tsx,js,jsx}"]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "file-manager"
-  ]
+  "implicitDependencies": ["file-manager"]
 }
