--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@functionland/fula-sec": "^2.0.0",
     "@functionland/react-native-fula": "^1.14.8",
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-async-storage/async-storage": "1.19.8",
     "@react-native-clipboard/clipboard": "^1.10.0",
     "@react-native-community/netinfo": "^9.3.7",
     "@react-native-community/slider": "^4.2.4",
@@ -48,8 +48,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-libs-react-native": "^1.2.1",
-    "react": "18.1.0",
-    "react-native": "0.69.1",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-ble-manager": "^10.0.2",
     "react-native-device-info": "^10.0.2",
     "react-native-fula": "^0.3.1",
@@ -65,9 +65,9 @@
     "react-native-reanimated": "^3.0.0-rc.0",
     "react-native-reanimated-carousel": "^3.0.3",
     "react-native-redash": "^17.0.0",
-    "react-native-safe-area-context": "^4.2.5",
+    "react-native-safe-area-context": "4.7.4",
     "react-native-screens": "^3.13.1",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.2.1",
     "react-native-webview": "^11.25.0",
@@ -81,54 +81,55 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@nrwl/cli": "14.3.6",
-    "@nrwl/detox": "14.3.6",
-    "@nrwl/eslint-plugin-nx": "14.3.6",
-    "@nrwl/jest": "14.3.6",
-    "@nrwl/linter": "14.3.6",
-    "@nrwl/react-native": "14.3.6",
-    "@nrwl/web": "14.3.6",
-    "@nrwl/workspace": "14.3.6",
-    "@react-native-community/cli": "7.0.3",
-    "@react-native-community/cli-platform-android": "7.0.1",
-    "@react-native-community/cli-platform-ios": "7.0.1",
+    "@nrwl/js": "17.1.3",
+    "@nrwl/workspace": "17.1.3",
+    "@nx/eslint": "17.1.3",
+    "@nx/eslint-plugin": "17.1.3",
+    "@react-native-community/cli": "11.3.7",
+    "@react-native-community/cli-platform-android": "11.3.7",
+    "@react-native-community/cli-platform-ios": "11.3.7",
     "@react-native-community/eslint-config": "^3.0.2",
+    "@react-native/metro-config": "^0.72.9",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/jest-native": "4.0.5",
-    "@testing-library/react-native": "9.1.0",
+    "@testing-library/jest-native": "5.4.3",
+    "@testing-library/react-native": "12.3.3",
     "@types/axios": "^0.14.0",
-    "@types/jest": "27.4.1",
+    "@types/jest": "29.4.4",
     "@types/lodash": "^4.14.182",
-    "@types/node": "16.11.7",
+    "@types/node": "18.14.4",
     "@types/react": "18.0.8",
-    "@types/react-native": "0.67.8",
     "@types/three": "^0.141.0",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
-    "babel-jest": "27.5.1",
-    "detox": "19.7.1",
-    "eslint": "^8.16.0",
-    "eslint-config-prettier": "8.1.0",
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
+    "babel-jest": "29.4.3",
+    "detox": "20.13.5",
+    "eslint": "8.46.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "^26.4.6",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "27.5.1",
+    "jest": "29.4.3",
     "jest-circus": "27.5.1",
+    "jest-environment-jsdom": "28.1.3",
     "jest-react-native": "18.0.0",
-    "metro": "0.71.1",
-    "metro-babel-register": "0.71.1",
-    "metro-react-native-babel-preset": "0.71.1",
-    "metro-resolver": "0.71.1",
-    "nx": "14.3.6",
+    "metro": "0.76.8",
+    "metro-babel-register": "0.76.8",
+    "metro-react-native-babel-preset": "0.76.8",
+    "metro-resolver": "0.76.8",
+    "nx": "17.1.3",
     "prettier": "2.7.1",
-    "react-native-config": "1.4.6",
-    "react-test-renderer": "18.1.0",
-    "ts-jest": "27.1.4",
+    "react-native-config": "1.5.0",
+    "react-test-renderer": "18.2.0",
+    "ts-jest": "29.1.1",
     "ts-node": "10.8.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "@nx/web": "17.1.3",
+    "@nx/jest": "17.1.3",
+    "@nx/detox": "17.1.3",
+    "@nx/react-native": "17.1.3"
   },
   "resolutions": {
     "react-native-svg": "12.3.0",
