--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -63,6 +63,8 @@
     "big-integer": "*",
     "@walletconnect/encoding": "*",
     "@walletconnect/modal-react-native": "^1.0.0-rc.5",
-    "ethers": "*"
+    "ethers": "*",
+    "metro-config": "*",
+    "@react-native/metro-config": "*"
   }
 }
