--- a/apps/file-manager/android/settings.gradle
+++ b/apps/file-manager/android/settings.gradle
@@ -1,30 +1,4 @@
 rootProject.name = 'FileManager'
-
-include ':react-native-config'
-project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
-
-apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle");
-applyNativeModulesSettingsGradle(settings)
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
-
-def isIDE = properties.containsKey('android.injected.invoked.from.ide') ||
-        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij")
-        (System.getenv("XPC_SERVICE_NAME") ?: "").contains("intellij") ||
-        System.getenv("IDEA_INITIAL_DIRECTORY") != null
-
-if (isIDE) {
-    includeBuild('../../../node_modules/react-native-gradle-plugin')
-} else {
-    includeBuild('../node_modules/react-native-gradle-plugin')
-}
-
-if (settings.hasProperty("newArchEnabled") && settings.newArchEnabled == "true") {
-    include(":ReactAndroid")
-    project(":ReactAndroid").projectDir = file('../node_modules/react-native/ReactAndroid')
-    include(":ReactAndroid:hermes-engine")
-    project(":ReactAndroid:hermes-engine").projectDir = file('../node_modules/react-native/ReactAndroid/hermes-engine')
-}
-
-apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle")
-useExpoModules()
+includeBuild('../node_modules/@react-native/gradle-plugin')
