--- a/apps/file-manager/android/app/build.gradle
+++ b/apps/file-manager/android/app/build.gradle
@@ -81,7 +81,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        
+        buildConfigField "boolean", "IS_NEW_ARCHITECTURE_ENABLED", "true"
+                
         testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         
