fix the upgrade, add expo

--- a/package.json
+++ b/package.json
@@ -49,13 +49,10 @@
     "axios": "^1.6.2",
     "big-integer": "^1.6.52",
     "ethers": "6.9.0",
-    "expo": "^49.0.21",
-    "expo-updates": "*",
+    "expo": "49.0.21",
     "expo-asset": "*",
-    "expo-file-system": "^13.2.0",
     "expo-font": "*",
     "expo-gl": "^13.2.0",
-    "expo-modules-core": "*",
     "expo-three": "^7.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
