--- a/apps/box/android/build.gradle
+++ b/apps/box/android/build.gradle
@@ -3,37 +3,55 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-<<<<<<< HEAD
-        minSdkVersion = 21
-=======
         minSdkVersion = 26
->>>>>>> 5e521cb (fix native codes manually)
         compileSdkVersion = 33
         targetSdkVersion = 33
         kotlinVersion = "1.8.20"
 
-        // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
-        ndkVersion = "23.1.7779620"
+        if (System.properties['os.arch'] == "aarch64") {
+            // For M1 Users we need to use the NDK 24 which added support for aarch64
+            ndkVersion = "24.0.8215888"
+        } else {
+            // Otherwise we default to the side-by-side NDK version from AGP.
+            ndkVersion = "21.4.7075529"
+        }
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:7.4.2")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
-        // // Add the dependency for the Google services Grad
-        // classpath 'com.google.gms:google-services:4.3.15'
+        // Add the dependency for the Google services Grad
+        classpath 'com.google.gms:google-services:4.3.15'
 
-        // // NOTE: 2.9.4 has issues: https://github.com/invertase/react-native-firebase/issues/6983
-        // classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
+        // NOTE: 2.9.4 has issues: https://github.com/invertase/react-native-firebase/issues/6983
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
     }
 }
 
 allprojects {
     repositories {
-        
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
+        google()
+        maven { url 'https://www.jitpack.io' }
+
         maven {
             // https://wix.github.io/Detox/docs/introduction/project-setup
             url("$rootDir/../node_modules/detox/Detox-android")
