replace lib: ethers -> wagmi

--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "@web3modal/wagmi-react-native": "^1.0.0",
     "axios": "^1.6.2",
     "big-integer": "^1.6.52",
-    "ethers": "6.9.0",
     "expo": "49.0.21",
     "expo-asset": "*",
     "expo-font": "*",
     "expo-gl": "^13.2.0",
     "expo-three": "^7.0.0",
+    "global": "^4.4.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "node-libs-react-native": "^1.2.1",
