remove usages of @walletconnect/modal-react-native

--- a/apps/box/package.json
+++ b/apps/box/package.json
@@ -62,9 +62,13 @@
     "react-native-modal": "*",
     "big-integer": "*",
     "@walletconnect/encoding": "*",
-    "@walletconnect/modal-react-native": "^1.0.0-rc.5",
-    "ethers": "*",
     "metro-config": "*",
-    "@react-native/metro-config": "*"
+    "@react-native/metro-config": "*",
+    "@walletconnect/react-native-compat": "*",
+    "wagmi": "*",
+    "viem": "*",
+    "@web3modal/wagmi-react-native": "*",
+    "@walletconnect/modal-react-native": "*",
+    "@walletconnect/wagmi-react-native": "*"
   }
 }
